--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -4,6 +4,7 @@
     <stroke android:color="#9A9A9A"
         android:width="3dp" />
 
-    <corners android:radius="5dp" />
+    <corners android:radius="15dp" />
+    <solid android:color="@color/white"/>
 
 </shape>
