--- a/app/src/main/res/layout/activity_customer_order_page.xml
+++ b/app/src/main/res/layout/activity_customer_order_page.xml
@@ -11,49 +11,78 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="400dp"
-        android:layout_height="600dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="30dp"
-        android:alpha=".5"
-        android:scaleType="centerCrop"
-        android:src="@drawable/undraw_order_delivered_re_v4ab"/>
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="400dp"
+            android:layout_height="600dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:alpha=".35"
+            android:scaleType="centerCrop"
+            android:src="@drawable/undraw_order_delivered_re_v4ab" />
 
-    <TextView
-        android:id="@+id/txtforwhattoorder"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:paddingLeft="24dp"
-        android:text="Which product do you want to order :"
-        android:textColor="#B3000000"
-        android:textSize="20dp"
-        android:textStyle="italic" />
-
-        <EditText
-            android:id="@+id/whatordertxt"
+        <TextView
+            android:id="@+id/txtforwhattoorder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/txtforwhattoorder"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="10dp"
-            android:background="#14000000"
-            android:drawablePadding="20dp"
-            android:padding="20dp"
-            android:textColor="#80000000"
-            android:textColorHint="#80000000" />
+            android:layout_margin="35dp"
+            android:layout_marginBottom="15dp"
+            android:paddingLeft="24dp"
+            android:textColor="#B3000000"
+            android:textSize="24dp" />
+
+        <TextView
+            android:id="@+id/price_show"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txtforwhattoorder"
+            android:layout_margin="24dp"
+            android:paddingLeft="24dp"
+            android:text=""
+            android:textColor="#B3000000"
+            android:textSize="20dp" />
+
+
+<!--        <TextView-->
+<!--            android:id="@+id/phonenumber"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/ptitle"-->
+<!--            android:layout_marginStart="15dp"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginEnd="15dp"-->
+<!--            android:layout_marginBottom="15dp"-->
+<!--            android:paddingLeft="24dp"-->
+<!--            android:text="Type your phone number:"-->
+<!--            android:textColor="#B3000000"-->
+<!--            android:textSize="20dp"-->
+<!--            android:textStyle="italic" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/whatordertxt"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/phonenumber"-->
+<!--            android:layout_marginStart="24dp"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:layout_marginEnd="24dp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:background="@drawable/border"-->
+<!--            android:drawablePadding="20dp"-->
+<!--            android:padding="20dp"-->
+<!--            android:textColor="#80000000"-->
+<!--            android:textColorHint="#80000000" />-->
 
         <TextView
             android:id="@+id/txtforqty"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/whatordertxt"
-            android:layout_margin="15dp"
+            android:layout_below="@id/price_show"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
             android:paddingLeft="24dp"
             android:text="Quantity :"
             android:textColor="#B3000000"
@@ -62,6 +91,7 @@
 
         <EditText
             android:id="@+id/qtytxt"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/txtforqty"
@@ -69,44 +99,61 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="10dp"
-            android:background="#14000000"
+            android:background="@drawable/border"
             android:drawablePadding="20dp"
             android:padding="20dp"
             android:textColor="#B3000000"
             android:textColorHint="#B3000000" />
 
-        <TextView
-            android:id="@+id/txtforpayment"
+<!--        <TextView-->
+<!--            android:id="@+id/txtforpayment"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/qtytxt"-->
+<!--            android:layout_marginStart="15dp"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginEnd="15dp"-->
+<!--            android:layout_marginBottom="15dp"-->
+<!--            android:paddingLeft="24dp"-->
+<!--            android:text="Payment :"-->
+<!--            android:textColor="#B3000000"-->
+<!--            android:textSize="20dp"-->
+<!--            android:textStyle="italic" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/payment"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/txtforpayment"-->
+<!--            android:layout_marginStart="24dp"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:layout_marginEnd="24dp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:background="@drawable/border"-->
+<!--            android:drawablePadding="20dp"-->
+<!--            android:padding="20dp"-->
+<!--            android:textColor="#B3000000"-->
+<!--            android:textColorHint="#B3000000" />-->
+
+
+<!--        <TextView-->
+<!--            android:id="@+id/final_price"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/payment"-->
+<!--            android:layout_marginStart="15dp"-->
+<!--            android:layout_marginEnd="15dp"-->
+<!--            android:layout_marginBottom="15dp"-->
+<!--            android:paddingLeft="24dp"-->
+<!--            android:text=""-->
+<!--            android:textColor="#B3000000"-->
+<!--            android:textSize="20dp"/>-->
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/orderbtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/qtytxt"
-            android:layout_margin="15dp"
-            android:paddingLeft="24dp"
-            android:text="Payment :"
-            android:textColor="#B3000000"
-            android:textSize="20dp"
-            android:textStyle="italic" />
-
-    <EditText
-        android:id="@+id/payment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtforpayment"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="10dp"
-        android:background="#14000000"
-        android:drawablePadding="20dp"
-        android:padding="20dp"
-        android:textColor="#B3000000"
-        android:textColorHint="#B3000000" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/regbtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/payment"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="30dp"
