--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -11,7 +11,7 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-250dp"
+        android:layout_marginTop="-270dp"
         android:src="@drawable/undraw_certification_re_ifll" />
 
     <TextView
@@ -19,9 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="390dp"
+        android:layout_marginTop="370dp"
         android:layout_marginEnd="35dp"
-        android:layout_marginBottom="60dp"
         android:gravity="center"
         android:text="ভেরিফিকেশন সম্পন্ন হয়েছে"
         android:textColor="@color/white"
@@ -33,10 +32,9 @@
         android:id="@+id/dialog1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/dialog"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="425dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="60dp"
         android:gravity="center"
         android:text="এখন আপনি নতুন পাসওয়ার্ড দিতে পারবেন"
         android:textColor="@color/white"
@@ -46,33 +44,50 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/dialog1"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="480dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        android:background="#81B6A9A9"
-        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
+        android:background="@drawable/border"
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="10dp"
         android:hint="নতুন পাসওয়ার্ড দিন"
+        android:inputType="textPassword"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="#B3FFFFFF" />
+
+
+    <EditText
+        android:id="@+id/confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/password"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/border"
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:drawablePadding="10dp"
+        android:hint="পাসওয়ার্ডটি পুনরায় লিখুন"
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="#B3FFFFFF" />
 
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/submit_new_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/password"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="122dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="122dp"
-        android:layout_marginBottom="20dp"
+        android:layout_below="@+id/confirm_password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="24dp"
         android:backgroundTint="@color/white"
         android:text="নিশ্চিত করুন"
-        android:textStyle="bold"
-        android:textColor="#673AB7"/>
+        android:textColor="#673AB7"
+        android:textStyle="bold" />
 
 </RelativeLayout>
