--- a/app/src/main/res/layout/activity_otp_verify.xml
+++ b/app/src/main/res/layout/activity_otp_verify.xml
@@ -12,8 +12,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_marginTop="70dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="Verify OTP"
+            android:text="ওটিপি ভেরিফাই করুন"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Enter your received OTP here"
+            android:text="এসএমএসে প্রাপ্ত ভেরিফিকেশন কোডটি নিচে লিখুন"
             app:layout_constraintEnd_toEndOf="@+id/textView4"
             app:layout_constraintStart_toStartOf="@+id/textView4"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -158,7 +158,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Don't get the OTP?"
+            android:text="ওটিপি পাননি?"
             app:layout_constraintEnd_toStartOf="@+id/tvResendBtn"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -170,7 +170,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="RESEND OTP"
+            android:text="পুনরায় পাঠান"
             android:textColor="#FF3838"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/textView7"
@@ -181,16 +181,16 @@
 
         <Button
             android:id="@+id/btnVerify"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="45dp"
-            android:layout_marginBottom="50dp"
-            android:text="VERIFY"
+            android:layout_margin="24dp"
+            android:text="নিশ্চিত করুন"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/textView7"
+            android:background="@drawable/btn_background"/>
 
         <ProgressBar
             android:id="@+id/progressBarVerify"
