--- a/app/src/main/res/layout/activity_registration_new.xml
+++ b/app/src/main/res/layout/activity_registration_new.xml
@@ -20,12 +20,12 @@
 
         <TextView
             android:id="@+id/createdialog"
-            android:layout_below="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/image"
             android:layout_centerHorizontal="true"
             android:text="অ্যাকাউন্ট খুলুন"
-            android:textColor="#B3000000"
+            android:textColor="@color/text"
             android:textSize="35dp"
             android:textStyle="bold" />
 
@@ -60,17 +60,35 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:background="#14000000"
+            android:background="@drawable/border"
             android:drawableLeft="@drawable/ic_baseline_local_phone_24"
             android:drawablePadding="5dp"
             android:hint="মোবাইল নাম্বার"
             android:inputType="phone"
             android:padding="20dp"
-            android:textColor="#80000000"
+            android:textColor="#B3000000"
             android:textColorHint="#80000000" />
 
+<!--        <EditText-->
+<!--            android:id="@+id/email"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/mobile"-->
+<!--            android:layout_marginStart="24dp"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:layout_marginEnd="24dp"-->
+<!--            android:layout_marginBottom="24dp"-->
+<!--            android:background="#14000000"-->
+<!--            android:drawableLeft="@drawable/ic_baseline_email_24"-->
+<!--            android:drawablePadding="5dp"-->
+<!--            android:hint="ই-মেইল অ্যাকাউন্ট"-->
+<!--            android:inputType="text"-->
+<!--            android:padding="20dp"-->
+<!--            android:textColor="#B3000000"-->
+<!--            android:textColorHint="#80000000" />-->
+
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/mobile"
@@ -78,31 +96,13 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:background="#14000000"
-            android:drawableLeft="@drawable/ic_baseline_email_24"
-            android:drawablePadding="5dp"
-            android:hint="ই-মেইল অ্যাকাউন্ট"
-            android:inputType="text"
-            android:padding="20dp"
-            android:textColor="#80000000"
-            android:textColorHint="#80000000" />
-
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/email"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            android:background="#14000000"
+            android:background="@drawable/border"
             android:drawableLeft="@drawable/ic_baseline_person_24"
             android:drawablePadding="5dp"
             android:hint="ব্যবহারকারীর নাম"
             android:inputType="text"
             android:padding="20dp"
-            android:textColor="#80000000"
+            android:textColor="#B3000000"
             android:textColorHint="#80000000" />
 
         <EditText
@@ -114,13 +114,13 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:background="#14000000"
+            android:background="@drawable/border"
             android:drawableLeft="@drawable/ic_baseline_work_24"
             android:drawablePadding="5dp"
             android:hint="ব্যবহারকারীর ভুমিকা"
             android:inputType="text"
             android:padding="20dp"
-            android:textColor="#80000000"
+            android:textColor="#B3000000"
             android:textColorHint="#80000000" />
 
         <EditText
@@ -132,13 +132,13 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:background="#14000000"
+            android:background="@drawable/border"
             android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
             android:drawablePadding="5dp"
             android:hint="গোপন পিন নাম্বার দিন"
             android:inputType="textPassword"
             android:padding="20dp"
-            android:textColor="#80000000"
+            android:textColor="#B3000000"
             android:textColorHint="#80000000" />
 
 
@@ -151,13 +151,13 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:background="#14000000"
+            android:background="@drawable/border"
             android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
             android:drawablePadding="5dp"
             android:hint="গোপন পিন নাম্বারটি পুনরায় লিখুন"
             android:inputType="textPassword"
             android:padding="20dp"
-            android:textColor="#80000000"
+            android:textColor="#B3000000"
             android:textColorHint="#80000000" />
 
         <com.google.android.material.button.MaterialButton
@@ -166,7 +166,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/conpass"
             android:layout_centerHorizontal="true"
-            android:layout_margin="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/btn_background"
             android:text="রেজিস্টার" />
 
@@ -176,7 +179,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="16dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
         <TextView
