--- a/app/src/main/res/layout/activity_registration_new.xml
+++ b/app/src/main/res/layout/activity_registration_new.xml
@@ -104,24 +104,46 @@
             android:padding="20dp"
             android:textColor="#B3000000"
             android:textColorHint="#80000000" />
-
-        <EditText
-            android:id="@+id/userrole"
+        <TextView
+            android:id="@+id/uroletxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/username"
+            android:text="ব্যবহারকারীর ভুমিকা:"
+            android:textSize="20dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/border"
-            android:drawableLeft="@drawable/ic_baseline_work_24"
-            android:drawablePadding="5dp"
-            android:hint="ব্যবহারকারীর ভুমিকা"
-            android:inputType="text"
-            android:padding="20dp"
-            android:textColor="#B3000000"
-            android:textColorHint="#80000000" />
+            android:layout_marginBottom="10dp"/>
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/userrole"
+            android:layout_below="@id/uroletxt"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="15dp">
+
+            <RadioButton
+                android:id="@+id/rbuyer"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Buyer"
+                android:layout_marginTop="10dp"
+                android:checked="false"
+                android:textSize="20dp" />
+
+            <RadioButton
+                android:id="@+id/rseller"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Seller"
+                android:layout_marginTop="20dp"
+                android:checked="false"
+                android:textSize="20dp" />
+        </RadioGroup>
 
         <EditText
             android:id="@+id/password"
